# log-system

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: log_agent.c  log_agent_internal.h  log_collector.c  log_collector_internal.h
tests/: test_agent.c  test_collector.c  test_main.c
